redacted latest edit

--- a/random.kv
+++ b/random.kv
@@ -258,7 +258,8 @@ ScrManager:
                 app.root.current = "mainmenu"
                 root.manager.transition.direction = "up"
 
-
+<Char_Window>:
+    name: "char_window"
 
 <Menu_Resources>:
     name: "menu_resources"
@@ -271,6 +272,7 @@ ScrManager:
             on_release: 
                 app.root.current = "mainmenu"
                 root.manager.transition.direction = "up"
+
 
 ####################################################################################################################################################
 ########################################################################## USERPROFILE #############################################################
